# kochou

./: .clang-format  .clang-tidy  .gitignore  CG.md  CMakeLists.txt  README.md  aa_main.cpp  constants.hpp  driver_main.cpp  enums.hpp  main.cpp  structs.hpp  xmake.lua
kochou/: CMakeLists.txt  core.hpp  info.hpp  ohri_app.cpp  xmake.lua
kochou/api/: context.cpp
kochou/assets/: shader.cpp  texture.cpp
kochou/engine/: buffer.cpp  core.cpp  cube.cpp  dynamic_buffer.cpp  object.cpp  uniform_buffer.cpp
kochou/engine/memory/: buffer.cpp
kochou/include/kochou/: context.hpp  docs.md  ensure.hpp  errc.hpp  exception.hpp  fixed_string.hpp  kochou.hpp  loader.hpp  log.hpp  ohri_app.hpp  result.hpp  unit.hpp  vulkan_chain.hpp  watchdog.hpp
kochou/include/kochou/api/: api.hpp  color.hpp  color_space.hpp  context.hpp  device.hpp  docs.md  draw.hpp  pipeline.hpp  render.hpp  type.hpp  type_ostream.hpp  window.hpp
kochou/include/kochou/api/pipeline/: p_3d.hpp
kochou/include/kochou/api/platform/: gpu.hpp  mask.hpp  os.hpp  queue.hpp  type.hpp  vulkan.hpp
kochou/include/kochou/api/shaders/: type.hpp
kochou/include/kochou/api/window/: metal.hpp  wayland.hpp  win32.hpp  xcb.hpp  xlib.hpp
kochou/include/kochou/api/wrapper/: concept.md  device.hpp  queue.hpp
kochou/include/kochou/assets/: shader.hpp  texture.hpp
kochou/include/kochou/core/: context.hpp  core.hpp  docs.md  extension.hpp  loader.hpp  readme.md  slang.hpp  system.hpp  type_ostream.hpp  version.hpp  vk_extension.hpp  vulkan_chain.hpp  window.hpp
kochou/include/kochou/core/ensure/: ensure.hpp  extension.hpp  feature.hpp  layer.hpp  should.hpp  version.hpp  vk_extension.hpp  vk_layer.hpp  vk_version.hpp
kochou/include/kochou/core/masks/: extension.hpp  gpu.hpp  queue.hpp  version.hpp
kochou/include/kochou/core/pipeline/: architect.hpp  config.hpp  dock.md  mesh.hpp  module.hpp  p_2d.hpp  shader.hpp
kochou/include/kochou/core/platform/: device.hpp  gpu.hpp  mask.hpp  queue.hpp  version.hpp  vulkan.hpp
kochou/include/kochou/core/requirements/: allowed.hpp  dock.md  ensure.hpp  extension.hpp  feature.hpp  layer.hpp  queue.hpp  should.hpp  type.hpp  version.hpp
kochou/include/kochou/core/wrapper/: context.hpp  device.hpp  instance.hpp  queue.hpp  queue_view.hpp  wrapper.hpp
kochou/include/kochou/engine/: buffer.hpp  core.hpp  cube.hpp  dynamic_buffer.hpp  mesh.hpp  object.hpp  object_interface.hpp  static_buffer.hpp  uniform_buffer.hpp
kochou/include/kochou/engine/memory/: buffer.hpp  pool.hpp
kochou/include/kochou/engine/mesh/: cube.hpp
kochou/include/kochou/ktl/: errc.hpp  fixed_string.hpp  mask.hpp  memory.hpp  reflection.hpp  result.hpp  xml.hpp
kochou/include/kochou/ktl/memory/: allocator.hpp  direct_storage.hpp  no_throw_allocator.hpp  no_throw_memory.hpp  noexcept_memory.hpp
kochou/include/kochou/ktl/reflection/: field_type.hpp  to_tuple.hpp
kochou/include/kochou/loader/: draft.hpp
kochou/include/kochou/masks/: extension.hpp  gpu.hpp  queue.hpp
kochou/include/kochou/module/: about.hpp  culling.hpp  render.hpp
kochou/include/kochou/pipeline/: architect.hpp  config.hpp
kochou/include/kochou/platform/: device.hpp
kochou/include/kochou/requirements/: allowed.hpp  docs.md  ensure.hpp  extension.hpp  version.hpp
kochou/include/kochou/shader/: load.hpp  shader.hpp  type.hpp
kochou/include/kochou/user/: colorspace.hpp  default_render.hpp  docs.md  quality.hpp
kochou/include/kochou/user/window/: metal.hpp  wayland.hpp  win32.hpp  window.hpp  xcb.hpp  xlib.hpp
kochou/include/kochou/utils/: ensure.hpp  external.hpp  mask.hpp  memory.hpp  require.hpp
kochou/src/: type_ostream.cpp
kochou/src/api/: context.cpp  metal.mm
kochou/src/core/: context.cpp  extension.cpp  instance.cpp  type_ostream.cpp  vulkan_chain.cpp
ktl/: CMakeLists.txt  fixed_string.hpp  mask.hpp  result.hpp  xmake.lua
ktl/include/ktl/: api.hpp  enums.hpp  errc.hpp  fixed_string.hpp  flat_map.hpp  flat_set.hpp  log.hpp  mask.hpp  reflection.hpp  result.hpp  type.hpp  xml.hpp
ktl/include/ktl/api/: api.hpp  bitmasks.hpp  commands.hpp  common.hpp  constants.hpp  docs.md  enums.hpp  extensions.hpp  features.hpp  formats.hpp  handles.hpp  loader.hpp  structs.hpp  type.hpp  version.hpp
ktl/include/ktl/api/dummy_headers/: directfb.h  nvscibuf.h  nvscisync.h  ubm.h  ubm_common.h  wayland-client.h  windows.h
ktl/include/ktl/api/dummy_headers/X11/: Xlib.h
ktl/include/ktl/api/dummy_headers/ggp_c/: vulkan_types.h
ktl/include/ktl/api/dummy_headers/screen/: screen.h
ktl/include/ktl/api/python/: TODO  api.hpp  basetypes.py  bitmasks.py  commands.py  constants.hpp  constants.py  cpp_meta.py  enums.hpp  enums.py  extend.py  extensions.py  features.py  formats.py  handles.py  header.py  headers.py  main.py  make_bitmask.py  make_constants.py  make_enums.py  make_extension.py  make_extensions.py  make_features.py  make_formats.py  make_functions.py  make_handles.py  make_structs.py  make_types.py  make_unions.py  name_rules.py  pointers.py  structs.py  type_cast.py  unions.py  utils.py  vk_types.py
ktl/include/ktl/memory/: noexcept_memory.hpp
ktl/include/ktl/reflection/: field_type.hpp  fields_amount.hpp  selector.hpp  type_array.hpp  type_name.hpp
ktl/memory/: allocator.hpp  direct_storage.hpp
ktl/reflection/: to_tuple.hpp
python/: .gitignore  (+13 more)
vulkan_utils/: CMakeLists.txt  descriptors.cpp  device.cpp  instance.cpp  io_handles.cpp  pipeline.cpp  render_pass.cpp  shaders.cpp  swapchain.cpp  vertices.cpp  window.cpp  xx_buffer.cpp
vulkan_utils/include/vulkan_utils/: descriptors.hpp  device.hpp  instance.hpp  io_handles.hpp  pipeline.hpp  render_pass.hpp  shaders.hpp  swapchain.hpp  vertices.hpp  window.hpp  xx_buffer.hpp
(+18 files in other folders)
